# palindrome

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: example.cpp  init.cpp  pop.cpp  push.cpp
include/: palindrome.hpp  stack.hpp
sources/: palindrome.cpp
tests/: test1.cpp
